Application/SparkServerLite/wwwroot/css/site.css
/* Additional Resets and Tweaks */
* { box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; }
html { overflow-y: scroll; }
img { max-width: 100%; }
a, a:visited { text-decoration: none; color: #6f41c5; transition: all 0.1s ease-in-out; }
a:hover { color: #187ad7; text-decoration: none; }
em { font-style: italic; }
.center { text-align: center; }
pre { padding: 1.5em 2em !important; }
pre > code { overflow-x: scroll; }
p > code { border: 1px solid #AAA; border-radius: 4px; padding: 0.25em 0.5em; font-family: monospace; font-size: 0.9em; }

/* BASE */
body { min-width: 300px; text-align: center; font-family: 'OpenSans', arial, sans-serif; background-color: #ebebeb; font-size: 16px; }
strong { font-weight: bold; } 
blockquote { font-style: italic; color: #555; background-color: #e3e3e3; margin: 2em 0; padding: 2em 2em 2em 2em; max-width: 650px; line-height: 1.5em; }
blockquote p:last-of-type { margin-bottom: 0; }
.bold { font-weight: bold; }

header { width: 100%; margin: 0 auto; padding: 1em 0 0 0; }

nav { display: block; margin: 1em auto; width: 100%; }
nav ul { display: flex; justify-content: center; align-items: center; margin: 0; }
nav ul li a { display: block; padding: 1em 2em; margin: 0 1em; font-family: 'RubikMedium';  }
nav ul li a:hover { text-decoration: none; }

h1, h2, h3, h4, h5, h6 { margin-bottom: 0.5em; line-height: 1em; font-family: "RubikBold", sans-serif; }
h1 { font-size: 3em; }
h2 { font-size: 2em; }
h3 { font-size: 1.5em; }
h4 { font-size: 1.4em; }
h5 { font-size: 1.2em; }
h6 { font-size: 1.15em; }

/* container sets overall size and position of site content across viewports */
.container { width: 100%; margin: 0 auto; }
.admin .container { margin: 0 auto; }

/* content defines background/margin/padding/spacing of site content */
.content { margin: 2em auto 1em auto; }
.content.admin { margin-bottom: 4em; }
.content.post { background-color: #FFF; }

.logo-wrapper img { width: 300px; margin: 0 auto; }
.logo-byline { margin-top: 0.5em; font-size: 0.95em; }

.loader { display: none; }
.loader-message { margin: 1em; padding: 1em; }

.section .title { padding: 1em 0; margin: 0; font-family: "RubikMedium", sans-serif; }

.hero { padding: 4em 1em; box-shadow: inset 0 0 192px #000; color: #FFF; }
.hero h2 { font-size: 2em; font-weight: bold; margin: 0.5em 0 0.5em 0; }
.hero h3 { font-size: 1.25em; font-family: "OpenSans", sans-serif; font-weight: bold; }

.hero-link { text-decoration: none; }
.hero-link:hover { text-decoration: none; }

.blog-list { padding: 0 1em; }

.blog-card { padding: 0; margin: 0 0 2em 0; text-align: left; background-color: #FFF; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25); }
.blog-card:last-of-type { margin-bottom: 0; }
.blog-card .overview { padding: 1em; }
.blog-card h3 { font-size: 1.75em; margin-bottom: 0.5em; line-height: 1.25em; }
.blog-card .image-preview { background-position: center; background-size: cover; height: 200px; }
.blog-card .image-preview > a { display: block; height: 100%; width: 100%; }
.blog-card .subtitle { font-size: 1.15em; margin-bottom: 1em; }
.blog-card .date { font-size: 0.85em; }

.blog-banner { background-size: cover; background-position: center; height: 250px; position: relative; border-radius: 4px; }
.blog-banner h1 { font-size: 2em; margin: 0; line-height: 1.25em; position: absolute; bottom: 0px; backdrop-filter: blur(18px); -webkit-backdrop-filter: blur(18px); color: #FFF; padding: 0.5em 0.5em; text-shadow: 2px 2px 2px #000; background-color: rgba(0, 0, 0, 0.25); border-bottom-left-radius: 4px; border-top-right-radius: 4px;}

.blog-about { margin: 1em auto; padding: 1em; text-align: left; background-color: #ebebeb; padding: 2em; font-size: 1em; }
.blog-about .columns { display: grid; grid-template-columns: 1fr; }
.blog-about .item { margin-bottom: 1em; }
.blog-about .item:last-of-type { margin-bottom: 0; }
.blog-about .label { font-weight: bold; margin-bottom: 0.25em; }
.blog-about p, .blog-about li { line-height: 1em !important; }
.blog-about ul.tags { columns: 1; margin: 0; }
.blog-about ul.tags li { margin: 0; line-height: 1em; list-style-type: none; float: left; line-height: 1.25em; }
.blog-about ul.tags li::after { content: ",\00a0"; } 
.blog-about ul.tags li:last-child::after { content: ""; }

article.blog { text-align: left; padding: 1em; background-color: #FFF; }
article.blog h1, article.blog h2, article.blog h3, article.blog h4, article.blog h5, article.blog h6 { max-width: 650px; }
article.blog h1 { font-size: 2.25em; margin: 0 0 1em 0; text-align: center; line-height: 1em; padding-top: 1em; }
article.blog p { font-size: 1.15em; line-height: 1.5em; margin-bottom: 1.5em; text-align: left; }
article.blog p:last-of-type { margin-bottom: 0; }
article.blog p a { font-weight: bold; }
article.blog .figure { margin: 0 0 2em 0; }
article.blog ul, article.blog ol { margin: 0 0 2em 2em; font-size: 1.15em; }
article.blog ul li { list-style-type: disc; line-height: 1.75em; margin-bottom: 1em; }
article.blog ol li { list-style-type: decimal; line-height: 1.75em; margin-bottom: 1em; }
article.blog li > ul, article.blog li > ol { padding-top: 1em; }
article.blog a:hover { box-shadow: inset 0 -8px 0 #ffe000; }
article.blog .figure > a { box-shadow: none; }

.sub-menu { padding: 1em 0; }

table { width: 100%; text-align: left; }
table th, td { padding: 1em; }
table th { background-color: #6e8198; color: #FFF; font-weight: bold; text-shadow: 1px 1px 0 #000; }
table tr:nth-child(even) { background-color: #f6f6f6; }
table tr:nth-child(odd) { background-color: #eaeaea; }

.status-message { margin: 1em auto 3em auto; padding: 1em; font-size: 1em; box-shadow: 0 0 24px #636363; border-radius: 12px; color: #FFF; font-weight: bold; }
.status-message.success { background-color: #1f650e; }
.status-message.error { background-color: #a50000; }

.field-validation-error { display: block; margin: 1em 0 1em 0; padding: 0.5em 1em; background-color: #a50000; color: #FFF; border-radius: 8px; font-weight: bold;}
/* ... */

